--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :stylesheets do %>
+<% content_for :stylesheets do %>
   <style type="text/css">
     .media { margin-top: 50px !important; }
     .media-heading a { text-decoration: none; }
