--- a/app/views/layouts/console/_header.html.erb
+++ b/app/views/layouts/console/_header.html.erb
@@ -7,13 +7,22 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button> 
-      <a class="navbar-brand" href="#">1762后台</a>
+      <a class="navbar-brand" href="#">g-cores fan club 后台</a>
     </div>
 
     <nav class="collapse navbar-collapse" role="navigation" id="t_navbarCollapse">
-      <p class="navbar-text">控制器</p>
+      <% if current_staff? %>
+        <p class="navbar-text">id: <%= current_staff.name %></p>
+      <% end %>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">回到主站</a></li>
+        <% if current_staff? %>
+          <li>
+            <%= link_to "登出", console_signout_url, method: :delete %>
+          </li>
+        <% end %>
+        <li>
+          <%= link_to "回到主站", root_url, target: "_blank" %>
+        </li>
       </ul>
     </nav>
   </div>
