--- a/app/views/layouts/console/_header.html.erb
+++ b/app/views/layouts/console/_header.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button> 
-      <a class="navbar-brand" href="#">g-cores fan club 后台</a>
+      <%= link_to "g-cores fan club 后台", console_shows_url, class: "navbar-brand" %>
     </div>
 
     <nav class="collapse navbar-collapse" role="navigation" id="t_navbarCollapse">
