--- a/app/assets/stylesheets/modules/_base.css.scss
+++ b/app/assets/stylesheets/modules/_base.css.scss
@@ -104,8 +104,8 @@
     border-right: 3px solid $gGraySS;
     padding: 0 10px 0 0;
     margin: 5px 0;
-    font-weight: bold;
-    color: $gBlack;
+    // font-weight: bold;
+    color: #000;
   }
 }
 
