--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,39 +1,58 @@
 <% content_for :wrapper_before do %>
   <div class="ph_introsite">
+    <%= image_tag "home_bg.jpg", id: "j_bgimg", class: "ph_introsite_bgimg" %>
+    <canvas style="" id="j_canvas" class="ph_introsite_bgcanvas"></canvas>
+    <div class="ph_introsite_bdmask"></div>
+
     <div class="container">
       <div class="ph_introsite_inner">
         <h1>这里是G-cores非官方粉丝站</h1>
         <p>目前只支持一些资料查询和在线收听功能。</p>
-        <p> 
-          <a href="http://www.g-cores.com" target="_blank" class="btn btn-sm btn-primary">
-            <span class="glyphicon glyphicon-home"></span> 机核网
-          </a> 可访问机核官方站 
-        </p>
-        <p> 
-          <a href="http://weibo.com/gamecore" target="_blank" class="btn btn-sm btn-success">
-            <span class="glyphicon glyphicon-user"></span> 机核网微博
-          </a> 关注机核最新动态
-        </p>
-        <p> 
-          <%= link_to shows_url, target: "_blank", class: "btn btn-sm btn-danger" do %>
-            <span class="glyphicon glyphicon-user"></span> 收听节目
-          <% end %> 查看目前本站收录的节目
-        </p>
+
+        <table>
+          <tr>
+            <th>
+              <a href="http://www.g-cores.com" target="_blank" class="btn btn-sm btn-primary">
+                <span class="glyphicon glyphicon-home"></span> 机核网
+              </a> 
+            </th>
+            <td>
+              可访问机核官方站 
+            </td>
+          </tr>
+
+          <tr>
+            <th>
+              <a href="http://weibo.com/gamecore" target="_blank" class="btn btn-sm btn-success">
+                <span class="glyphicon glyphicon-user"></span> 机核网微博
+              </a>
+            </th>
+            <td>
+              关注机核最新动态 
+            </td>
+          </tr>
+
+          <tr>
+            <th>
+              <%= link_to shows_url, target: "_blank", class: "btn btn-sm btn-danger" do %>
+                <span class="glyphicon glyphicon-user"></span> 收听节目
+              <% end %>
+            </th>
+            <td>
+              查看目前本站收录的节目 
+            </td>
+          </tr>
+        </table>
       </div>
     </div>
   </div>
 <% end %>
 
-<%= content_for :stylesheets do %>
-  <style type="text/css">
-    .ph_introsite h1 {
-      margin-bottom: 25px;
-    }
-    .ph_introsite p {
-      color: #888;
-    }
-    .ph_introsite_inner {
-      padding: 30px 0 10px 20px;
-    }
-  </style>
+<%= content_for :javascripts do %>
+  <script type="text/javascript">
+    $(function(){
+      stackBlur.blurImage( 'j_bgimg', 'j_canvas', 40, false );
+    });
+  </script>
 <% end %>
+  
