--- a/app/assets/stylesheets/specific/pages/home.css.scss
+++ b/app/assets/stylesheets/specific/pages/home.css.scss
@@ -1,9 +1,7 @@
 .g_wrapper {
-  position: relative;
-  z-index: 0;
-  padding: 150px 0 100px;
+  padding: 0;
+  margin: 0;
 }
-
 
 .g_footer {
   margin-top: 0;
@@ -12,24 +10,75 @@
   }
 }
 
-
 @media screen and (max-width: 768px) {
   .g_wrapper {
     padding-top: 0px !important;
   }
+  .ph_introsite:first-child {
+    padding-top: 40px !important;
+  }
 }
 
 .ph_introsite {
+  $pvl: 60px;
+  position: relative;
+  z-index: 0;
+  padding: $pvl 0;
 
-  height: 300px;
+  &:first-child {
+    padding-top: $pvl + 100;
+  }
+  &.ph_introsite-head {
+    background: image-url('home-bg-design.jpg') 0 0 repeat;
+    * {
+      color: #fff !important;
+    }
+  }
+  &.ph_introsite-intro {
+    background: #f9f9f9;
+    h2 {
+      color: #333;
+    }
+    p {
+      color: #666;
+    }
+  }
+  .ph_introsite-staff_more {
+    text-align: center;
+    a {
+      display: inline-block;
+      border: 2px solid #fff;
+      margin: 12px 0;
+      padding: 10px 30px;
+      border-radius: 100px;
+      color: #fff;
+      font-weight: bold;
 
-  h1 {
-    margin-bottom: 25px;
+      &:hover {
+        color: #666;
+        background: #fff;
+        text-decoration: none;
+      }
+    }
   }
-  p {
-    color: #888;
+
+  h1, h2 {
+    margin-top: 0;
+    margin-bottom: 20px;
   }
+
+  // h1 {
+  //   font-size: 36px;
+  //   margin-bottom: 30px;
+  // }
+
+  // h2 {
+  //   font-size: 30px;
+  //   margin-bottom: 25px;
+  // }
+
   
+  // mask and background
   .ph_introsite_bgcanvas, .ph_introsite_bgimg, .ph_introsite_bdmask {
     position: absolute;
     top: 0;
@@ -38,27 +87,47 @@
     width: 100% !important;
     height: 100% !important;
   }
-
   .ph_introsite_bdmask {
-    background: #fff;
-    opacity: .6;
+    background: #000;
+    opacity: .8;
   }
-
-  * {
-    color: #fff !important;
-  }
-
   .ph_introsite_bgimg {
     display: none;
   }
 
-  .ph_introsite_inner {
-    padding: 30px 0 10px 20px;
+  // content
+  .ph_intr {
+    padding: 30px 0 10px 0;
+    table td {
+      padding: 10px;
+    }
+    table th {
+      text-align: right;
+    }
+    p {
+      color: #888;
+    }
   }
-  .ph_introsite_inner table td {
-    padding: 10px;
-  }
-  .ph_introsite_inner table th {
-    text-align: right;
+
+  .ph_radioapps {
+    padding: 0;
+    list-style: none;
+
+    a {
+      display: block;
+      border: 1px solid #b3b3b3;
+      margin: 12px 0;
+      padding: 10px;
+      text-align: center;
+      border-radius: 100px;
+      color: #808080;
+      background: #fff;
+
+      &:hover {
+        color: #666;
+        background: #f5f5f5;
+        text-decoration: none;
+      }
+    }
   }
 }
