fix some ie8 bugs

--- a/app/assets/stylesheets/specific/pages/home.css.scss
+++ b/app/assets/stylesheets/specific/pages/home.css.scss
@@ -90,6 +90,7 @@
   .ph_introsite_bdmask {
     background: #000;
     opacity: .8;
+    filter:alpha(opacity=80);
   }
   .ph_introsite_bgimg {
     display: none;
