--- a/app/assets/stylesheets/modules/application/_header.css.scss
+++ b/app/assets/stylesheets/modules/application/_header.css.scss
@@ -32,11 +32,13 @@
         background: asset-url('logo-hover.png') 0 0 no-repeat;
         .g_logo_img_hover {
           opacity: 1;
+          filter:alpha(opacity=100);
         }
       }
       .g_logo_img_hover {
         @include vendor-prefix(transition, opacity .2s ease 0);
         opacity: 0;
+        filter:alpha(opacity=0);
         font-size: 16px;
         line-height: 1.6;
         height: 80px;
