--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
   <%= render 'layouts/stylesheets' %>
 
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!a--[if lt IE 9]>
+    <%= javascript_include_tag "shiv_respond", "data-turbolinks-track" => true %>
+  <!a[endif]-->
+
   <%= csrf_meta_tags %>
 </head>
 <body>
