--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,8 @@
     <div class="container text-right">
       <p>本站为机核网非官方粉丝站</p>
       <p>All Rights Reserved 2009-2014 Game Cores</p>
-      <p>Powered by Bootstrap</p>
+      <p><small>Powered by Bootstrap</small></p>
+      <p><small>支持浏览器：IE>9（IE8部分支持），以及chrome、safari、firefox的最新版</small></p>
     </div>
   </footer>
   
