fix some ie8 style bugs

--- a/app/assets/stylesheets/specific/pages/home.css.scss
+++ b/app/assets/stylesheets/specific/pages/home.css.scss
@@ -43,6 +43,9 @@
       color: #666;
     }
   }
+  &.ph_introsite-staff {
+    background: #333;
+  }
   .ph_introsite-staff_more {
     text-align: center;
     a {
