--- a/app/assets/stylesheets/modules/application/_base.css.scss
+++ b/app/assets/stylesheets/modules/application/_base.css.scss
@@ -25,25 +25,26 @@ body {
 }
 
 .gcd_header {
+  $thumb_h: 200px;
   position: relative;
-  // height: 13rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  // height: 130px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   // border-bottom: 1px solid $gGrayEx;
   .gcd_header_hr {
     position: absolute;
-    top: 10rem;
+    top: 100px;
     left: 0;
     width: 100%;
     height: 0;
     border-top: 1px solid $gGrayEx;
   }
   .gcd_header_thumb {
-    height: 20rem;
-    // margin: 0 2rem;
-    padding: 1rem;
+    height: 200px;
+    // margin: 0 20px;
+    padding: 10px;
     border: 1px solid $gGrayEx;
-    line-height: 18rem;
+    line-height: 180px;
     text-align: center;
     background: #f9f9f9;
     img {
@@ -53,14 +54,14 @@ body {
     }
   }
   .gcd_header_info {
-    padding-top: 5rem;
+    padding-top: $thumb_h/4;
     h2 {
-      line-height: 5rem;
+      line-height: $thumb_h/4;
       margin: 0;
     }
     p {
-      margin-top: 1.2rem;
-      margin-bottom: .8rem;
+      margin-top: 12px;
+      margin-bottom: 8px;
     }
     p.gcd_header_info_desc {
       color: $gGrayS;
