--- a/app/views/layouts/player.html.erb
+++ b/app/views/layouts/player.html.erb
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <%= render partial: "layouts/head", locals: { layout_name: 'player' } %>
   <title><%= content_for?(:main_title) ? yield(:main_title)+" | " : "" %>G-cores Fan Club</title>
-
-  <!-- Stylesheets -->
-  <%= stylesheet_link_tag "player", media: "all", "data-turbolinks-track" => true %>
-  <%= render 'layouts/stylesheets' %>
-
-  <%= csrf_meta_tags %>
 </head>
 <body>
   <%= render "layouts/player/header" %>
