--- a/app/views/console/volumes/_form.html.erb
+++ b/app/views/console/volumes/_form.html.erb
@@ -1,4 +1,10 @@
-<p class="lead"> <%= render_form_action(@volume) %>节目 </p>
+<p class="lead">
+  <%= render_form_action(@volume) %>节目
+  <% unless @volume.new_record? %> -
+    <%= link_to @volume.title, volume_url(@volume), target: "_blank" %>
+    <small> / <%= link_to "资料卡管理", console_volume_timelines_url(@volume) %> </small>
+  <% end %>
+</p>
 
 <%= render partial: 'console/shared/errors', locals: { object: @volume } %>
 
