update console timeline edit page

--- a/app/views/console/timelines/index.html.erb
+++ b/app/views/console/timelines/index.html.erb
@@ -85,6 +85,22 @@
           <span class="label label-default">总时长度： <strong id="j_info_total">~</strong></span> 
           <span class="label label-primary">目前进度： <strong id="j_info_current">~</strong></span>
         </p>
+        <p>
+          <button type="button" id="j_start" class="btn btn-xs btn-default">开始</button>
+          <button type="button" id="j_pause" class="btn btn-xs btn-default">暂停</button>
+        </p>
+        <p style="font-family:  Lucida Console;">
+          <button type="button" id="j_next5" class="btn btn-xs btn-default">+5s</button>
+          <button type="button" id="j_next30" class="btn btn-xs btn-default">+30s</button>
+          <button type="button" id="j_next60" class="btn btn-xs btn-default">+1min</button>
+          <button type="button" id="j_next600" class="btn btn-xs btn-default">+10min</button>
+        </p>
+        <p style="font-family:  Lucida Console;">
+          <button type="button" id="j_prev5" class="btn btn-xs btn-default">-5s</button>
+          <button type="button" id="j_prev30" class="btn btn-xs btn-default">-30s</button>
+          <button type="button" id="j_prev60" class="btn btn-xs btn-default">-1min</button>
+          <button type="button" id="j_prev600" class="btn btn-xs btn-default">-10min</button>
+        </p>
       </div>
     </div>
   [% } %]
