update style; fix many bugs

--- a/app/assets/stylesheets/modules/application/_header.css.scss
+++ b/app/assets/stylesheets/modules/application/_header.css.scss
@@ -45,6 +45,7 @@
         margin: 10px 10px 10px 100px;
         color: $gBlack;
         overflow: hidden;
+        white-space: nowrap;
         p {
           margin-bottom: 5px;
         }
