--- a/app/views/layouts/application/_header.html.erb
+++ b/app/views/layouts/application/_header.html.erb
@@ -17,7 +17,7 @@
         <%= link_to volume_url(latest_vol), class: "g_logo_img" do %>
           <div class="g_logo_img_hover">
             <p>
-              <span class="label label-primary"><%= latest_vol.show.name %></span>
+              <span class="label label-primary"><%= latest_vol.show.name %></span> <br>
               <span class="label label-info"><%= latest_vol.show_no %></span>
             </p>
             <span class="glyphicon glyphicon-music"></span>
