--- a/app/assets/stylesheets/modules/player/_base.css.scss
+++ b/app/assets/stylesheets/modules/player/_base.css.scss
@@ -32,8 +32,8 @@ body {
 
 .gp_sidebar, .gp_container, .gp_cards_container {
   height: 100%;
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
   // &:hover {
   //   overflow: auto;
   //   // padding-right: 0;
@@ -60,8 +60,16 @@ body {
     @include vendor-prefix(transition, opacity .5s ease 0);
     opacity: .5;
     margin-bottom: 20px;
+    color: $gGrayS;
     &.active {
       opacity: 1;
+    }
+    &:hover {
+      color: #111;
+      text-decoration: none;
+      img {
+        border-color: #606060;
+      }
     }
   }
   &.gp_cards-manual {
@@ -76,18 +84,33 @@ body {
   }
   .gp_cards_img {
     position: relative;
-    .label {
+    .gp_cards_timeline, .gp_cards_type {
       position: absolute;
-      top: 7px;
-      left: 136px;
     }
-    .label-default {
+    a.gp_cards_timeline {
+      text-align: left;
+      top: 0;
+      left: -15px;
+      .label {
+        display: inline-block;
+      }
+
+      &:hover .label{
+        color: #fff;
+        background: $gMain;
+      }
+    }
+    .gp_cards_type {
       display: block;
       white-space: normal;
       line-height: 1.5;
       width: 70px;
-      top: 30px;
+      bottom: 0;
+      left: 140px;
       text-align: left;
+      background: #f2f2f2;
+      border: 1px solid #ddd;
+      color: #666;
     }
   }
   .gp_cards_title {
@@ -96,13 +119,6 @@ body {
   }
   .gp_cards_desc {
     height: $lh*2;
-  }
-  a {
-    color: $gGrayS;
-    &:hover {
-      color: $gGray;
-      text-decoration: none;
-    }
   }
 }
 
@@ -149,6 +165,11 @@ body {
   .inner {
     padding: 15px;
   }
+}
+
+.gp_topbar, .gp_footerControl {
+  position: relative;
+  z-index: 9999;
 }
 
 .gp_topbar {
